--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/logo.svg" /> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Card Generator</title>
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="http://localhost:5173/swiper">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Vite + React">
+<meta property="og:title" content="">
 <meta property="og:description" content="">
 <meta property="og:image" content="">
 
 <!-- Twitter Meta Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Vite + React">
+<meta name="twitter:card" content="">
+<meta name="twitter:title" content="">
 <meta name="twitter:description" content="">
 <meta name="twitter:image" content="">
 
